--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "relay": "relay-compiler --watch"
+    "relay": "relay-compiler",
+    "relay:watch": "relay-compiler --watch"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -23,6 +24,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-relay": "^14.1.3",
     "relay-compiler": "^14.1.0"
   }
 }
