--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -14,11 +13,11 @@
     "@fortawesome/pro-thin-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
-    "@fullcalendar/core": "^6.0.3",
-    "@fullcalendar/daygrid": "^6.0.3",
-    "@fullcalendar/interaction": "^6.0.3",
-    "@fullcalendar/react": "^6.0.4",
-    "@fullcalendar/timegrid": "^6.0.3",
+    "@fullcalendar/core": "^6.1.4",
+    "@fullcalendar/daygrid": "^6.1.4",
+    "@fullcalendar/interaction": "^6.1.4",
+    "@fullcalendar/react": "^6.1.4",
+    "@fullcalendar/timegrid": "^6.1.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -26,7 +25,6 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "craco-alias": "^3.0.1",
     "eslint": "8.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +33,6 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
-    "recoil": "^0.7.6",
     "relay-runtime": "^14.1.0",
     "typescript": "4.9.4",
     "web-vitals": "^2.1.0"
@@ -43,16 +40,22 @@
   "devDependencies": {
     "@types/react-relay": "^14.1.3",
     "@types/relay-runtime": "^14.1.6",
+    "apexcharts": "^3.37.0",
     "babel-plugin-relay": "^14.1.0",
+    "framer-motion": "^9.0.2",
     "graphql": "^16.6.0",
+    "react-apexcharts": "^1.4.0",
+    "react-quill": "^2.0.0",
+    "read-excel-file": "^5.6.0",
     "relay-compiler": "^14.1.0",
     "relay-compiler-language-typescript": "^15.0.1",
-    "relay-config": "^12.0.1"
+    "relay-config": "^12.0.1",
+    "tesseract.js": "^4.0.2"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "relay": "relay-compiler"
   },
