--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "joi": "^17.7.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
