--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
+    "graphql-ws": "^5.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
@@ -45,6 +46,7 @@
     "framer-motion": "^9.0.2",
     "graphql": "^16.6.0",
     "react-apexcharts": "^1.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-quill": "^2.0.0",
     "read-excel-file": "^5.6.0",
     "relay-compiler": "^14.1.0",
